--- a/templates/page.order-form.liquid
+++ b/templates/page.order-form.liquid
@@ -1,3 +1,12 @@
+{% comment %}
+DIEN MOD
+Bulk Order Page features:
+- Responsive design using flexbox
+- Supports items with variants composed of up to 3 options
+- Supports items that have no variant
+- Supports regular cart page and cart drawer
+
+{% endcomment %}
 <style>
     .bulk-order {
         /*width: 80%;*/
@@ -235,14 +244,14 @@
                         {% endif %}
                         </div>
                     </div>
-                    {% comment %}
+{% comment %}
                     <div class="bulk-order__box box--end">
                         <!-- Clear Button -->
                         <div class="bulk-order__clear-button">
                             <button class="btn btn--full"><span class="primary-text" aria-hidden="false">Clear</span></button>
                         </div>
                     </div>
-                    {% endcomment %}
+{% endcomment %}
                 </div>
             {% endif %}
         {% endfor %}
@@ -289,6 +298,7 @@
 
 <script>
     jQuery(function orderForm ($) {
+        // All quantity fields
         var $quantity = $('.bulk-order__quantity input[type="number"]');
 
         // Returns a jQuery object of quantity inputs with non-zero value
@@ -298,10 +308,10 @@
             });
         }
 
+        // Ask for confirmation before leaving page if some quantities fields are non-zero.
         function confirmLeave(e) {
             var confirm = 'Are you sure?';
 
-            // If quantity fields have been changed, ask for confirmation before leaving page
             if (nonZeroQuantity().length) {
                 (e || window.event).returnValue = confirm;
                 return confirm;
@@ -311,7 +321,7 @@
         // Accepts a jQuery collection of input elements
         // Returns a Promise
         // Note: the received collection will be altered
-        function addToCart($quantitiesToAdd, callback) {
+        function bulkOrderAddToCart($quantitiesToAdd, callback) {
             function addNext() {
                 // Resets quantity inputs
                 inputEl.value = '0';
@@ -321,7 +331,7 @@
                 // Add to cart the remaining quantities in jQuery collection
                 // If no more to add, invoke callback
                 if ($quantitiesToAdd.length) {
-                    addToCart($quantitiesToAdd, callback);
+                    bulkOrderAddToCart($quantitiesToAdd, callback);
                 }
                 else {
                     typeof callback === 'function' && callback();
@@ -373,17 +383,21 @@
 
         $(window).on('beforeunload', confirmLeave);
 
-        $('.bulk-order__add-button button.product__add-to-cart-button').on('click', function bulkOrderAddToCart(evt) {
+        $('.bulk-order__add-button button.product__add-to-cart-button').on('click', function bulkOrderAddClicked(evt) {
             var $quantitiesToAdd = nonZeroQuantity();
-
-            // If cart drawer present
-            // Add conditional code here...
-            // TODO...
 
             // Perform Ajax call only if there are non-zero quantities.
             if ($quantitiesToAdd.length) {
-                addToCart($quantitiesToAdd, bulkOrderAddToCartDone.bind(null, evt.target));
+                bulkOrderAddToCart($quantitiesToAdd, bulkOrderAddToCartDone.bind(null, evt.target));
             }
+
+            // If cart drawer is disabled, then clicking on the button with secondary label will navigate to cart page
+            // If cart drawer is enabled, then theme.js will take care of sliding the drawer out.
+            {% unless settings.show_cart_drawer %}
+            if ($(evt.target).hasClass('btn--to-secondary-transitioned')) {
+                window.location.href = '/cart';
+            }
+            {% endunless %}
         });
     });
 </script>
