Using strict mode

--- a/snippets/gift-wrapping.liquid
+++ b/snippets/gift-wrapping.liquid
@@ -60,6 +60,7 @@
       Shopify.Cart.DOM = Shopify.Cart.DOM || {};
 
       jQuery(function () {
+          "use strict";
           var SELECTORS = {
               gift_wrap_checkbox : '{{ gift_wrap_checkbox_id }}',
               cart_container : '{{ cart_container_selector }}',
