--- a/snippets/product-form.liquid
+++ b/snippets/product-form.liquid
@@ -209,7 +209,7 @@ DIEN MOD:
     * "Quantity in cart" tooltip
     * */
     jQuery(function quantityTooltip($) {
-
+        "use strict";
         function updateTooltip() {
             var productId = {{ product.id | default: 0 }};
             return ($.ajax({
