--- a/templates/page.order-form.liquid
+++ b/templates/page.order-form.liquid
@@ -272,6 +272,7 @@ Bulk Order Page features:
 
 <script>
     jQuery(function orderForm ($) {
+        "use strict";
         // All quantity fields
         var $quantity = $('.bulk-order__quantity input[type="number"]');
 
